<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/google_login_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/google_logo"
            android:src="@drawable/google"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/facebook_login_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="110dp"
            android:contentDescription="@string/facebook_logo"
            android:src="@drawable/facebook" />

    </LinearLayout>

    <TextView
        android:id="@+id/register_link"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/no_account_register"
        android:textColor="@color/white" />

</RelativeLayout>