<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textMultiLine"
        android:padding="14dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/setup_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_username"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textMultiLine"
        android:padding="14dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/setup_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_full_name"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/country"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textMultiLine"
        android:padding="14dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/setup_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_country_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/button"
        android:text="@string/save" />

</RelativeLayout>